# sonar

./: .coverage  .dockerignore  .env.development  .env.template  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  THIRD-PARTY-LICENSES.txt  build_docker_dev.sh  clean_dev_env.ps1  clean_dev_env.sh  compose-dev.yml  compose.yml  dc-dev.sh  dev-manage.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.test-gh.yml  env.template  environment.yml  load_big_test_data.sh  logs.ps1  logs.sh  package-lock.json  package.json  pyproject.toml  readme.md  requirements-testing.txt  run-permission-model-update.ps1  run_celery_tasks.ps1  run_html_report.ps1  template.env  test_data.json  tsconfig.app.json  (+1 more)
apps/: lineages.tsv
apps/backend/: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose-dev.yml  compose.yml  manage.py  pyproject.toml
apps/backend/.github/workflows/: coverage-report.yml
apps/backend/conf/: ci_init_pg.py
apps/backend/conf/docker/: common.env  dev-secrets.env  dev.env  prod.env  sonar-cli-action.env
apps/backend/conf/initdb-test/: dev-initdb.test.sh  dump-sonar-12-test-db.sql  dump-sonar-test-db-12-2025_01_22.sql  dump-sonar-test-db-12-2025_01_23.sql  dump-sonar-test-db-12-2025_01_24.sql  dump-sonar-test-db-180-2025_01_21.sql  dump-sonar-test-db-2024_09_12.sql  dump-sonar-test-db-2024_12_13.sql  dump-sonar-test-db-202501291436.sql  dump-sonar-test-db-2025_01_03.COPY.sql  dump-sonar-test-db-2025_01_15.sql
apps/backend/conf/postgresql/: common.conf  default-config-notused.conf  dev.conf  prod.conf
apps/backend/conf/redis/: redis.conf
apps/backend/covsonar_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
apps/backend/lineage-test-data/: lineages_test.tsv
apps/backend/permission_model/: permission_model.py
apps/backend/resource/: Insomnia_2024-02-09.json  Insomnia_2024-05-21.json
apps/backend/rest_api/: admin.py  cache_tasks.py  customDRF.py  customDRF_backup.py  models.py  serializers.py  tests.py  urls.py  utils.py  views_status.py  viewsets.py  viewsets_database.py  viewsets_sample.py  viewsets_statistics_and_plots.py
apps/backend/rest_api/data_entry/: annotation_import.py  gbk_import.py  property_job.py  reference_job.py  sample_entry_job.py  sample_import.py  sample_job.py  sequence_job.py
apps/backend/rest_api/fixtures/: initial_auth.json  test_data_10.json  test_data_10.json.xz  test_data_1000.json.xz  test_data_sm.json
apps/backend/rest_api/migrations/: 0001_initial.py  0002_alter_sample2property_value_varchar_and_more.py  0003_sample_properties_alter_element_accession_and_more.py  0004_sample_properties_alter_sample2property_value_text.py  0005_alter_alignment_id_alter_element_id_and_more.py  0006_alignment2mutation_mutation_mutation2annotation_and_more.py  0007_entereddata.py  0008_alter_entereddata_name.py  0009_remove_mutation_aa_profile_and_more.py  0010_alter_mutation_unique_together.py  0011_alter_mutation_unique_together.py  0012_alter_mutation_unique_together.py  0013_alter_entereddata_unique_together_and_more.py  0014_sample_collection_date_sample_country_and_more.py  0015_gene_genepart_sourceelement_remove_element_molecule_and_more.py  0016_alter_gene_table.py  0017_remove_gene_symbol.py  0018_alter_mutation_element.py  0019_replicon_rename_genepart_genesegment_and_more.py  0020_remove_reference_standard.py  0021_remove_alignment_element_remove_mutation_element_and_more.py  0022_mutation_type.py  0023_mutation_mutation_gene_id_2f1f1c_idx_and_more.py  0024_mutation_mutation_label_94967f_idx.py  0025_alignment_alignment_gene_id_81f250_idx.py  0026_alignment2mutation_alignment2m_alignme_d1c719_idx.py  0027_mutation_mutation_type_bf4ac1_idx.py  0028_remove_mutation_mutation_label_94967f_idx_and_more.py  0029_remove_alignment_alignment_gene_id_81f250_idx_and_more.py  0030_delete_mutation2property.py  0031_remove_annotationtype_test.py  0032_annotationtype_impact.py  0033_alter_alignment_id_alter_annotationtype_id_and_more.py  0034_mutation_unique_mutation.py  0035_mutation_unique_mutation_null_gene.py  0036_alter_alignment2mutation_unique_together_and_more.py  0037_mutation_unique_mutation_null_alt_and_more.py  0038_annotationtype_unique_annotation_null_region.py  0039_alter_gene_cds_accession_alter_gene_cds_symbol_and_more.py  0040_alter_mutation_alt_alter_mutation_ref.py  (+33 more)
apps/backend/rest_api/test/: mixins.py
apps/backend/scripts/linux/: build-docker-dev.sh  clean-dev-env.sh  clean-prod-env.sh  dc-dev-set-up-test-database.sh  dc-gh-action.sh  dev-copy-gbk.sh  dev-dump-data.sh  dev-load-big-test-data.sh  dev-load-test-data-10k.sh  dev-logs.sh  dev-manage.sh  dev-run-celery-tasks.sh  dev-run-coverage.sh  dev-run-html-report.sh  prod-manage.sh  rename-legacy-postgres-db.sh
apps/backend/scripts/sc2_lineages/: sc2_lineages.py
apps/backend/scripts/win/: build-docker-dev.ps1  clean-dev-env.ps1  dc-dev.ps1  dev-copy-gbk.ps1  dev-load-big-test-data.ps1  dev-load-test-data-10k.ps1  dev-logs.ps1  dev-manage.ps1  dev-run-celery-tasks.ps1  dev-run-coverage.ps1  dev-run-html-reports.ps1  dev-run-permission-model-update.ps1
apps/backend/sonar_backend/: asgi.py  celery.py  settings.py  urls.py  utils.py  version.py  wsgi.py
apps/backend/test-data/: dump-sonar-test-db-180-2025_01_21_INSERT.sql  dump-sonar-test-db-2024_09_12.sql  dump-sonar-test-db-2024_09_12.tmp.sql  dump-sonar-test-db-2025_01_03.INSERT.sql  lineages_2024_01_15.ready.tsv
apps/cli/: .dockerignore  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  env.template  environment.docker.yml  environment.yml  lineages.tsv  pyproject.toml  sonar-cli.config
apps/cli/.github/workflows/: dev.workflow.yml  prod.workflow.yml.disable
apps/cli/tests/: conftest.bkup  conftest.py  test_align.py  test_annotation.py  test_cache.py  test_common_utils.py  test_config.py  test_e2e.py  test_e2e_import.py  test_e2e_match.py  test_failcase.py  test_job.py  test_lineages.py  test_sonar.py  test_utils.py
(+375 files in other folders)
