[tool.poetry]
name = "covsonar-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "covsonar_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^4.2.7"
numpy = "^1.26.1"
pandas = "^2.1.2"
django-q = "^1.3.9"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
