[project]
name = "sonar-cli"
dynamic = ["version"]
description = "Sonar command line tool to interface with the sonar-backend and PostgreSQL version."
authors = [
    { name = "Stephan Fuchs", email = "FuchsS@rki.de" },
    { name = "Kunaphas Kongkitimanon", email = "KongkitimanonK@hpi.de" },
    { name = "Matthew Huska", email = "HuskaM@rki.de" },
]
requires-python = "~=3.11"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "biopython>=1.79,<1.80",
    "tqdm~=4.59.0",
    "more-itertools~=8.7.0",
    "pyaml~=20.4.0",
    "tabulate~=0.8.9",
    "mpire>=2.6.0,<3",
    "pandas>=2.2.1,<3",
    "requests>=2.28.0,<3",
    "python-dotenv>=0.21.0,<0.22",
    "psutil>=5.9.3,<6",
    "dateparser>=1.1.4,<2",
    "parasail>=1.3.4,<2",
    "python-magic>=0.4.27,<0.5",
    "sqlparse>=0.4.4,<0.5",
    "colorlog>=6.8.0,<7",
    "packaging~=24.0",
    "pango-aliasor>=0.3.0,<0.4",
    "pyarrow>=19.0.0,<20",
    "pywfa",
]

[project.urls]
Homepage = "https://github.com/rki-mf1/sonar-cli"
Repository = "https://github.com/rki-mf1/sonar-cli"

[project.scripts]
sonar-cli = "sonar_cli.sonar:run"

[dependency-groups]
dev = [
    "black>=22.6.0,<23",
    "coverage[toml]>=7.4.3,<8",
    "flake8>=4.0.1,<5",
    "flake8-bandit>=3.0.0,<4",
    "flake8-black>=0.3.3,<0.4",
    "flake8-bugbear>=22.6.22,<23",
    "flake8-import-order>=0.18.1,<0.19",
    "pre-commit>=3.4.0,<4",
    "pytest>=8.1.1,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-dependency>=0.6.0,<0.7",
    "pytest-order>=1.2.0,<2",
    "pytest-sugar>=1.0.0,<2",
    "pytest-xdist>=3.3.1,<4",
    "safety>=3.0.0,<4",
    "zimports>=0.6.0,<0.7",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sonar_cli"]

[tool.coverage.report]
show_missing = true

[tool.black]
target-version = ['py311']

[tool.pytest.ini_options]
markers = [
    "run: test order",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"
style = "semver"

[tool.uv.sources]
pywfa = { git = "https://github.com/kcleal/pywfa.git", rev = "9c5e192" }

