[tool.poetry]
name = "sonar-cli"
version = "1.0.1"
description = "Sonar command line tool to interface with the sonar-backend and PostgreSQL version."
authors = ["Stephan Fuchs <FuchsS@rki.de>", "Kunaphas Kongkitimanon <KongkitimanonK@hpi.de>", "Juliane Schmachtenberg <anna-juliane.schmachtenberg@hpi.de>", "Simeon Schmachtenberg", "Matthew Huska <HuskaM@rki.de>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/rki-mf1/sonar-cli"
repository = "https://github.com/rki-mf1/sonar-cli"

[tool.poetry.dependencies]
python = "^3.11"
biopython = "~1.79"
tqdm = "~4.59.0"
more-itertools = "~8.7.0"
pyaml = "~20.4.0"
tabulate = "~0.8.9"
mpire = "^2.6.0"
pandas = "^2.2.1"
requests = "^2.28.0"
python-dotenv = "^0.21.0"
psutil = "^5.9.3"
dateparser = "^1.1.4"
parasail = "^1.3.4"
python-magic = "^0.4.27"
sqlparse = "^0.4.4"
colorlog = "^6.8.0"
packaging = "^24.0"
pango-aliasor = "^0.3.0"
pyarrow = "^19.0.0"
pywfa = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
coverage = {extras = ["toml"], version = "^7.4.3"}
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.6.22"
flake8-import-order = "^0.18.1"
pre-commit = "^3.4.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.6.0"
pytest-order = "^1.2.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.3.1"
safety = "^3.0.0"
zimports = "^0.6.0"

[tool.poetry.scripts]
sonar-cli = "sonar_cli.sonar:run"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sonar_cli"]

[tool.coverage.report]
show_missing = true

[tool.black]
target-version = ['py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "run: test order",
]
